<resources>
    <string name="app_name">What2eat</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps_search">MapsSearch</string>
    <string name="choice_3">Choice 3</string>
    <string name="choice_1">Choice 1</string>
    <string name="designed_to_eat">Designed to eat!</string>
    <string name="what2eat">What2eat?</string>
    <string name="enter_top_3_choices">Enter top 3 choices</string>
    <string name="option_1">Option 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="reset">Reset</string>
    <string name="whereisit">Whereisit?</string>
    <string name="todo">TODO</string>
    <string name="here_it_is">Here it is!</string>
    <string name="decide_again">Decide again!</string>
    <string name="gps_place_holder">gps_place_holder</string>
</resources>